@@ -2,8 +2,8 @@
 
 mail_services="{www, https, submission, imap, imaps, pop3, pop3s, ssh}"
 
-table <spamd-white> persist
-table <nospamd> persist file "/etc/mail/nospamd"
+#table <spamd-white> persist
+#table <nospamd> persist file "/etc/mail/nospamd"
 #table <fail2ban> persist
 
 # Options
@@ -19,13 +19,10 @@ block log all
 pass out
 
 # rules for spamd(8)
-pass in on egress proto tcp from any to any port smtp \
-    rdr-to 127.0.0.1 port spamd
-# For OpenBSD 5.8
 #pass in on egress proto tcp from any to any port smtp \
 #    divert-to 127.0.0.1 port spamd
-pass in on egress proto tcp from <nospamd> to any port smtp
-pass in log on egress proto tcp from <spamd-white> to any port smtp
+#pass in on egress proto tcp from <nospamd> to any port smtp
+#pass in log on egress proto tcp from <spamd-white> to any port smtp
 
 # Access to other mail services
 pass in on egress proto tcp from any to any port $mail_services
